=== master

* Remove deprecated Model.allowed_columns method in the base model support (jeremyevans)

* Remove deprecated Model.plugin_module_defined? private method (jeremyevans)

* Remove deprecated support for Model#_before_validation private method (jeremyevans)

=== 5.0.0 (2017-09-01)

* Make bin/sequel -M option always use base 10 (jeremyevans)

* Don't use savepoints when creating indexes inside a transaction on databases that don't support transactional schema modifications (jeremyevans) (#1407)

* Support :if_not_exists option when creating indexes on PostgreSQL 9.5+ (DyegoCosta) (#1405)

* Make threaded connection pools not block while connections are being made (jeremyevans)

* SQL::Expression#clone and #dup now return self, since all expressions should be frozen value objects (jeremyevans)

* Don't create empty arrays for unused association callbacks (jeremyevans)

* Cache association method name symbols instead of recomputing them everytime (jeremyevans)

* Raise an exception if attempting to create a prepared statement using a dataset with a delayed evaluation (jeremyevans)

* Make ConnectionPool#size thread safe by using the pool mutex (jeremyevans)

* Use instance_exec instead of instance_eval when passing a block, to work with lambdas that accept no arguments (jeremyevans)

* Freeze SQL::StringAgg instances in string_agg extension (jeremyevans)

* Freeze SQL::DateAdd instances in date_arithmetic extension (jeremyevans)

* Freeze SQL::Expression.comparison_attrs (jeremyevans)

* Rename SQL::Subscript#f to #expression, keeping #f as an alias (jeremyevans)

* Require the :pool_class Database option be a class to use a custom connection pool (jeremyevans)

* Make the class_table_inheritance plugin raise an Error during update if any UPDATE query does not affect a single row (jeremyevans)

* Change most send calls to public_send unless calling private methods is expected (jeremyevans)
