@@ -1,5 +1,7 @@
 === master
 
+* Remove deprecated Model use_after_commit_rollback class and instance methods (jeremyevans)
+
 * Remove deprecated Model.allowed_columns method in the base model support (jeremyevans)
 
 * Remove deprecated Model.plugin_module_defined? private method (jeremyevans)
